; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_thread.c_thread_alloc_stack.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_thread.c_thread_alloc_stack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i64 }

@.str = private unnamed_addr constant [50 x i8] c"thread_alloc_stack called on a thread with kstack\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @thread_alloc_stack(%struct.thread* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thread*, align 8
  %5 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.thread*, %struct.thread** %4, align 8
  %7 = getelementptr inbounds %struct.thread, %struct.thread* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @KASSERT(i32 %10, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.thread*, %struct.thread** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @vm_thread_new(%struct.thread* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

17:                                               ; preds = %2
  %18 = load %struct.thread*, %struct.thread** %4, align 8
  %19 = call i32 @cpu_thread_alloc(%struct.thread* %18)
  store i32 1, i32* %3, align 4
  br label %20

20:                                               ; preds = %17, %16
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @vm_thread_new(%struct.thread*, i32) #1

declare dso_local i32 @cpu_thread_alloc(%struct.thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
